--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,12 +3,12 @@
     <SwitchPreference
         android:defaultValue="true"
         android:disableDependentsState="false"
-        android:key="indicatorEnabled"
+        android:key="monitorEnabled"
         android:summary="@string/pref_enable_indicator_summary"
         android:title="@string/pref_enable_indicator_title" />
 
     <PreferenceCategory
-        android:dependency="indicatorEnabled"
+        android:dependency="monitorEnabled"
         android:title="@string/pref_notification_settings_title">
 
         <SwitchPreference
@@ -21,7 +21,7 @@
             android:defaultValue="total"
             android:entries="@array/indicator_speeds_titles"
             android:entryValues="@array/indicator_speeds_values"
-            android:key="indicatorSpeedToShow"
+            android:key="internetSpeedToShow"
             android:summary="%s"
             android:title="@string/pref_indicator_speed_to_show" />
 
@@ -44,13 +44,13 @@
             android:defaultValue="Bps"
             android:entries="@array/notification_speed_units_titles"
             android:entryValues="@array/notification_speed_units_values"
-            android:key="indicatorSpeedUnit"
+            android:key="internetSpeedUnit"
             android:summary="%s"
             android:title="@string/pref_speed_unit_title" />
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:dependency="indicatorEnabled"
+        android:dependency="monitorEnabled"
         android:title="@string/pref_general_options_title">
 
         <SwitchPreference
